<resources>
    <string name="app_name">Storage Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from_truck">To Customer</string>
    <string name="to_truck">To Truck</string>
    <string name="truck">Truck</string>
    <string name="stock">Stock</string>
    <string name="insert_image">insert Image</string>
    <string name="add">add</string>
    <string name="product_name_hint">Product Name</string>
    <string name="price_hint">Price</string>
    <string name="amount_hint">Amount</string>
    <string name="product_name">Product name:</string>
    <string name="price">Price:</string>
    <string name="amount">Amount:</string>
    <string name="delete">Delete</string>
    <string name="total">Total</string>
    <string name="cost">cost</string>
    <string name="extract">Extract</string>
    <string name="done">Done</string>
</resources>
