<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/product_name_hint"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_hint"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/product_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount_hint"
            android:textSize="16sp"
            android:textStyle="bold"/>
    <TextView
        android:id="@+id/cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cost"
        android:textSize="16sp"
        android:textStyle="bold"/>
    </LinearLayout>