<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        android:id="@+id/toolbar_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        />

    <RadioGroup
        android:id="@+id/add_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_select">

        <RadioButton
            android:id="@+id/radio_from_truck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_truck"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_to_truck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:checked="true"
            android:text="@string/to_truck"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_extract_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>