<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <ImageView
            android:id="@+id/product_Image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/colorPrimaryDark"
            android:layout_margin="5dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/product_name"
                    ></TextView>
                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product name "
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/price"
                    ></TextView>
                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textSize="16sp"
                    android:textColor="@android:color/holo_green_dark"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/amount"
                    ></TextView>
                <EditText
                    android:id="@+id/product_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Amount"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
